feat: add Change Password, Send Verifiication, Verify Email
