# docs/swagger.json
@@ -1040,6 +1040,65 @@
                 }
             }
         },
+        "/proteng-user-mgmt/auth/changepassword/{id}": {
+            "patch": {
+                "description": "Changes the password while logged in",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "change password",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "User credentials",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ChangePasswordInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "schema": {
+                            "$ref": "#/definitions/models.HttpResponseOK"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/models.HttpResponseError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/models.HttpResponseError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not found",
+                        "schema": {
+                            "$ref": "#/definitions/models.HttpResponseError"
+                        }
+                    }
+                }
+            }
+        },
         "/proteng-user-mgmt/auth/forgotpassword": {
             "post": {
                 "description": "Initiates the forgot password process by sending a reset email to the user",
@@ -1218,6 +1277,108 @@
                     },
                     "403": {
                         "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/models.HttpResponseError"
+                        }
+                    }
+                }
+            }
+        },
+        "/proteng-user-mgmt/auth/sent-verification": {
+            "post": {
+                "description": "Initiates the email verification process by sending a verification email to the user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "initiates verification process",
+                "parameters": [
+                    {
+                        "description": "User email",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.SendVerificationInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "schema": {
+                            "$ref": "#/definitions/models.HttpResponseOK"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/models.HttpResponseError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/models.HttpResponseError"
+                        }
+                    },
+                    "502": {
+                        "description": "Bad Gateway",
+                        "schema": {
+                            "$ref": "#/definitions/models.HttpResponseError"
+                        }
+                    }
+                }
+            }
+        },
+        "/proteng-user-mgmt/auth/verifyemail/{verificationToken}": {
+            "patch": {
+                "description": "Verifies the email using the provided verification token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "Verify email",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Verification Token",
+                        "name": "verificationToken",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "schema": {
+                            "$ref": "#/definitions/models.HttpResponseOK"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "$ref": "#/definitions/models.HttpResponseError"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/models.HttpResponseError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/models.HttpResponseError"
                         }
@@ -1638,6 +1799,21 @@
                 }
             }
         },
+        "models.ChangePasswordInput": {
+            "type": "object",
+            "required": [
+                "current_password",
+                "new_password"
+            ],
+            "properties": {
+                "current_password": {
+                    "type": "string"
+                },
+                "new_password": {
+                    "type": "string"
+                }
+            }
+        },
         "models.DuplicateJobInput": {
             "type": "object",
             "required": [
@@ -1646,6 +1822,9 @@
                 "options"
             ],
             "properties": {
+                "description": {
+                    "type": "string"
+                },
                 "input_protein": {
                     "type": "string"
                 },
@@ -1666,6 +1845,9 @@
                     "additionalProperties": true
                 },
                 "ref_job_id": {
+                    "type": "string"
+                },
+                "run_type": {
                     "type": "string"
                 }
             }
@@ -1715,6 +1897,9 @@
                 "options"
             ],
             "properties": {
+                "description": {
+                    "type": "string"
+                },
                 "input_protein": {
                     "type": "string"
                 },
@@ -1733,6 +1918,9 @@
                 "options": {
                     "type": "object",
                     "additionalProperties": true
+                },
+                "run_type": {
+                    "type": "string"
                 }
             }
         },
@@ -1787,6 +1975,17 @@
                 }
             }
         },
+        "models.SendVerificationInput": {
+            "type": "object",
+            "required": [
+                "email"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                }
+            }
+        },
         "models.SignInAdminInput": {
             "type": "object",
             "required": [
@@ -1823,9 +2022,6 @@
         "models.UserInput": {
             "type": "object",
             "properties": {
-                "citizen_id": {
-                    "type": "string"
-                },
                 "email": {
                     "type": "string"
                 },
@@ -1842,6 +2038,9 @@
                     }
                 },
                 "surname": {
+                    "type": "string"
+                },
+                "user_role": {
                     "type": "string"
                 }
             }
